fix new line to br issue + overflow on issue pane

--- a/src/components/IssuePane/styles.scss
+++ b/src/components/IssuePane/styles.scss
@@ -1,6 +1,8 @@
 .issue-pane {
     flex: 1;
-    padding: 0 16px;
+    max-height: calc(100vh - 88px);
+    overflow-y: auto;
+    padding: 0 16px 32px;
 
     ion-grid {
         --ion-grid-padding: 0;
